# arxiv-brew

./: .gitignore  README.md  arxiv-brew  pyproject.toml  stage1.json
arxiv_brew/: __init__.py  __main__.py  arxiv_api.py  config.py  db.py  download.py  exitcodes.py  filter.py  init.py  keywords.py  keywords_cli.py  pipeline.py  pull.py  refine.py  summarize.py
config/: my_research.md.template  settings.json
docs/: agent_integration.md  architecture.md
tests/: test_arxiv_api.py  test_dedup.py  test_filter.py  test_keyword_management.py  test_keywords.py  test_refine.py  test_summarize.py
